--- a/Crafty/Crafty/MasterPage.Master
+++ b/Crafty/Crafty/MasterPage.Master
@@ -1,4 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MasterPage.master.cs" Inherits="Crafty.MasterPage" %>
+<asp:Content ContentPlaceHolderID="MainContent"></asp:Content>
+<asp:ContentPlaceHolder ID="MainContent" runat="server"></asp:ContentPlaceHolder>
 
 <!DOCTYPE html>
 
@@ -20,10 +22,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+           <!--     @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" }) -->
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                        <li><a runat="server" id="adminLink" visible="false" 
+      href="~/Admin/AdminPage">Admin</a></li>
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Survey", "Survey", "Home")</li>
                     <li>@Html.ActionLink("Products", "Contact", "Home")</li>
