--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">Monthly liqour subscription service.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Binge Booze Boxes</h1>
+    <p class="lead">Monthly liqour subscription service</p>
+    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more here! &raquo;</a></p>
 </div>
 
 <div class="row">
