--- a/Crafty/Crafty/Views/RegisteredUsers/Index.cshtml
+++ b/Crafty/Crafty/Views/RegisteredUsers/Index.cshtml
@@ -24,6 +24,9 @@
         <th>
             @Html.DisplayNameFor(model => model.totalSubscriptionCost)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.productDemographic)
+        </th>
         <th></th>
     </tr>
 
@@ -40,6 +43,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.totalSubscriptionCost)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.productDemographic)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
