--- a/Crafty/Crafty/Views/Survey/Edit.cshtml
+++ b/Crafty/Crafty/Views/Survey/Edit.cshtml
@@ -1,33 +1,28 @@
 ﻿@model Crafty.Models.Survey
 
 @{
-    ViewBag.Title = "Take Survey";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Your monthly liqour</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
-        <h4>...is a survey away!</h4>
+        <h4>Survey</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <h3>1. What type of drink do you prefer?</h3>
-            <div class="col-md-10">
-                @{var listItems = new List<SelectListItem>
-                        ()
-                {
-                new SelectListItem {Text = "Vodka",   Value = "1"},
-                new SelectListItem {Text = "Beer", Value = "2"}
-                };
+        @Html.HiddenFor(model => model.ID)
 
-                    @Html.DropDownListFor(m => m.question1, listItems)
-                }
+        <div class="form-group">
+            @Html.LabelFor(model => model.question1, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.question1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.question1, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -89,11 +84,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Submit Survey" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
-                    }
+}
 
 <div>
     @Html.ActionLink("Back to List", "Index")
