--- a/Crafty/Crafty/Views/Home/Contact.cshtml
+++ b/Crafty/Crafty/Views/Home/Contact.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Contact Information";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>@ViewBag.Title</h2>
 <h4>@ViewBag.Message</h4>
