--- a/Crafty/Crafty/Views/Shared/_Layout.cshtml
+++ b/Crafty/Crafty/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Survey", "Survey", "Home")</li>
-                    <li>@Html.ActionLink("Products", "Products")</li>
+                    <li>@Html.ActionLink("Products", "Products", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
