Cleaned up database, Survey page populates database

--- a/Crafty/Crafty/Views/Home/Survey.cshtml
+++ b/Crafty/Crafty/Views/Home/Survey.cshtml
@@ -26,7 +26,7 @@
                 new SelectListItem {Text = "Beer", Value = "2"}
                 };
 
-                    @Html.DropDownListFor(m => m.question1, listItems)
+                    @Html.DropDownListFor(model => model.question1, listItems)
                 }
             </div>
         </div>
