--- a/Crafty/Crafty/Views/Shared/_Layout.cshtml
+++ b/Crafty/Crafty/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
                     
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Survey", "Survey", "Home")</li>
+                    <li>@Html.ActionLink("Survey", "Create", "Survey")</li>
                     <li>@Html.ActionLink("Products", "Products", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
