--- a/Crafty/Crafty/Views/Account/Register.cshtml
+++ b/Crafty/Crafty/Views/Account/Register.cshtml
@@ -30,10 +30,17 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.zipCode, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.zipCode, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" /> <!-- This line is for the "Register" button-->
         </div>
     </div>
+
 }
 
 @section Scripts {
