working on SQL queries

--- a/Crafty/Crafty/Views/Manage/Index.cshtml
+++ b/Crafty/Crafty/Views/Manage/Index.cshtml
@@ -6,7 +6,10 @@
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
-<div>
+<div>                                                                        @*To edit this page, also edit ManageViewModel and ManageController*@
+    @{ 
+        @Model.userID                                                          
+    }
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
