Add pics to Views

--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Beer</h2>
+        <img src="~/Photo/beerbarley.jpg" />
         <p>Whether you're into triple IPA's or refreshing hard apple ciders, we have the  drink
             for you!</p>
         <p>ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
@@ -23,6 +24,7 @@
 
     <div class="col-md-4">
         <h2>Wine</h2>
+        <img src="~/Photo/wine.jpg" />
         <p>Red wines, white wines, champagne, we have it all!</p>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
@@ -30,6 +32,7 @@
 
     <div class="col-md-4">
         <h2>Liquor</h2>
+        <img src="~/Photo/whisky.jpg" />
         <p>From a Macallan 30 Year neat to somemthing to mix into soda, you can find it all here!</p>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
