change to manage View

--- a/Crafty/Crafty/Views/Manage/Index.cshtml
+++ b/Crafty/Crafty/Views/Manage/Index.cshtml
@@ -9,8 +9,8 @@
 <div> 
     <h3>Your current box: </h3>                                                                       @*To edit this page, also edit ManageViewModel and ManageController*@
     @{ 
-        @Model.product;                                                      
-    }
+        <h2>@Model.product test</h2>
+    }  
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
