--- a/Crafty/Crafty/Views/Manage/Index.cshtml
+++ b/Crafty/Crafty/Views/Manage/Index.cshtml
@@ -6,14 +6,28 @@
 <h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
-<div> 
-    <h3>Your current box: </h3>                                                                       @*To edit this page, also edit ManageViewModel and ManageController*@
-    @{ 
-        <h4>@Model.product : $@Model.boxPrice  month</h4>
-       // foreach(var x in Model.boxcontents)
-        <a href="Survey/Create">Take survey to update your preferences</a>
-    }  
-    <br />                              @*foreach loop through to get boxcontents*@
+<div>
+    @*To edit this page, also edit ManageViewModel and ManageController*@
+    @{
+        //IF USER HAS NOT TAKEN TEST, THEN DON'T SHOW THIS OR SHOW NULL OR SOMETHING. THIS IS A BUG
+        if (Model.product == null)
+        {
+            <br />
+            <h4><a href="/Survey/Create">Complete a survey</a> to begin receiving monthly liqour boxes.</h4>
+        }
+        else {
+            <h3>Your current subscription: @Model.product</h3>
+            <h4>$@Model.boxPrice per month which includes:</h4>
+
+            foreach(string s in Model.contentNames)
+            {
+                <h5>@s</h5>
+            }
+            <br />
+            <h5><a href = "/Survey/Create" > Retake our survey</a> to update your preferences.</h5>
+            <br />
+        }
+    } 
     <br />
     <h4>Change your account settings</h4>
     <hr />
@@ -38,13 +52,13 @@
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
+
              See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                 for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
+
              Uncomment the following block after you have set up two-factor authentication
         *@
-        @*  
+        @*
             <dt>Phone Number:</dt>
             <dd>
                 @(Model.PhoneNumber ?? "None") [
