--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Binge Booze Boxes</h1>
+    <h1><strong>Booze Boxes</strong></h1>
     <p class="lead">Monthly liqour subscription service</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more here! &raquo;</a></p>
 </div>
@@ -12,29 +12,25 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Beer</h2>
-        <img src="~/Photo/beerbarley.jpg" />
+        <img src="~/Photo/beerbarley.jpg" height="230" width="385"/>
         <p>Whether you're into triple IPA's or refreshing hard apple ciders, we have the  drink
             for you!</p>
-        <p>ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.</p>
+
         <p>** gives you delicious and refreshing monthly liqour packages.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
 
     <div class="col-md-4">
         <h2>Wine</h2>
-        <img src="~/Photo/wine.jpg" />
+        <img src="~/Photo/wine.jpg" height="230" width="385"/>
         <p>Red wines, white wines, champagne, we have it all!</p>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
 
     <div class="col-md-4">
         <h2>Liquor</h2>
-        <img src="~/Photo/whisky.jpg" />
-        <p>From a Macallan 30 Year neat to somemthing to mix into soda, you can find it all here!</p>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <img src="~/Photo/whisky.jpg" height="230" width="355" />
+        <p>From a Macallan 30 year neat to somemthing to mix with soda, you can find it here!</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
