--- a/Crafty/Crafty/Views/Survey/Index.cshtml
+++ b/Crafty/Crafty/Views/Survey/Index.cshtml
@@ -10,6 +10,10 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@{ 
+    <p>testing 123</p>
+}
 <table class="table">
     <tr>
         <th>
