Created more product classes; simplified constructors in product classes

--- a/Crafty/Crafty/Views/Survey/Index.cshtml
+++ b/Crafty/Crafty/Views/Survey/Index.cshtml
@@ -12,7 +12,7 @@
 </p>
 
 @{ 
-    <p>testing 123</p>
+    <p>testing 123....put user demographics here for the admin to see!</p>
 }
 <table class="table">
     <tr>
