--- a/Crafty/Crafty/Views/Survey/Create.cshtml
+++ b/Crafty/Crafty/Views/Survey/Create.cshtml
@@ -30,13 +30,13 @@
             </div>
         </div>
         <div class="form-group">
-            <h4>2.  Do you prefer red wine or white?</h4>
+            <h4>2.  Do you consume your beverage rather quickly or slowly?</h4>
             <div class="col-md-10">
                 @{var listItems2 = new List<SelectListItem>
                         ()
                 {
-                new SelectListItem {Text = "Red",   Value = "0"},
-                new SelectListItem {Text = "White", Value = "1"}
+                new SelectListItem {Text = "Slowly", Value = "1"}
+                new SelectListItem {Text = "Quickly",   Value = "10"},
                 };
 
                     @Html.DropDownListFor(m => m.question2, listItems2)
@@ -65,7 +65,7 @@
                         ()
                 {
                 new SelectListItem {Text = "Yes",   Value = "10"},
-                new SelectListItem {Text = "No", Value = "3"}
+                new SelectListItem {Text = "No", Value = "1"}
                 };
 
                     @Html.DropDownListFor(m => m.question4, listItems4)
@@ -93,9 +93,9 @@
                 @{var listItems6 = new List<SelectListItem>
                         ()
                  {
-                new SelectListItem {Text = "Once",   Value = "3"},
-                new SelectListItem {Text = "Twice", Value = "4"},
-                new SelectListItem {Text = "3 or more times", Value = "5"}
+                new SelectListItem {Text = "Once",   Value = "5"},
+                new SelectListItem {Text = "Twice", Value = "7"},
+                new SelectListItem {Text = "3 or more times", Value = "10"}
                 };
 
                     @Html.DropDownListFor(m => m.question6, listItems6)
@@ -108,8 +108,8 @@
                 @{var listItems7 = new List<SelectListItem>
                         ()
                 {
-                new SelectListItem {Text = "Once",   Value = "0"},
-                new SelectListItem {Text = "Twice", Value = "4"},
+                new SelectListItem {Text = "Once",   Value = "1"},
+                new SelectListItem {Text = "Twice", Value = "5"},
                 new SelectListItem {Text = "3 or more times", Value = "10"}
                 };
 
@@ -124,7 +124,7 @@
                         ()
                 {
                 new SelectListItem {Text = "Yes",   Value = "10"},
-                new SelectListItem {Text = "No", Value = "5"}
+                new SelectListItem {Text = "No", Value = "1"}
                 };
 
                     @Html.DropDownListFor(m => m.question8, listItems8)
