--- a/Crafty/Crafty/Views/Survey/Create.cshtml
+++ b/Crafty/Crafty/Views/Survey/Create.cshtml
@@ -35,8 +35,8 @@
                 @{var listItems2 = new List<SelectListItem>
                         ()
                 {
-                new SelectListItem {Text = "Slowly", Value = "1"}
-                new SelectListItem {Text = "Quickly",   Value = "10"},
+                new SelectListItem {Text = "Slowly", Value = "1"},
+                new SelectListItem {Text = "Quickly",   Value = "10"}
                 };
 
                     @Html.DropDownListFor(m => m.question2, listItems2)
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="form-group">
-            <h4>3.  How many times have you visited a vineyard within the past 3 years?</h4>
+            <h4>3.  Do you like your prefer ?</h4> 
             <div class="col-md-10">
                 @{var listItems3 = new List<SelectListItem>
                         ()
