--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
             for you!</p>
 
         <p>** gives you delicious and refreshing monthly liqour packages.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
 
     <div class="col-md-4">
