Create Specialty class

--- a/Crafty/Crafty/Views/Home/Products.cshtml
+++ b/Crafty/Crafty/Views/Home/Products.cshtml
@@ -4,7 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Available Box Products</h2><br />
+<h2>Our Current Beverage Products</h2><br />
+
+
+<strong>Here at BoozeBingeBox</strong>, we want your moments of inebriation to be as full of joy and morning hangovers as ours are. That's the reason why we get up and put on pants everyday - to customize many different packages of liquid awesomeness for your hours off the clock. Please take a survey so we can better gauge which combination best may suit you! Cheers!
 
 <h4>Craft Beer</h4>
 <h4>Non-craft Beer</h4>
