--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 
 <div class="jumbotron">
     <h1><strong>Booze Boxes</strong></h1>
-    <p class="lead">Monthly liqour subscription service</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more here! &raquo;</a></p>
+    <p class="lead">Monthly Liqour Subscription Service</p>
+    <p><a href="~/Home/Products" class="btn btn-primary btn-lg">Learn more here! &raquo;</a></p>
 </div>
 
 <div class="row">
@@ -17,20 +17,20 @@
             for you!</p>
 
         <p>** gives you delicious and refreshing monthly liqour packages.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Account/Login">Learn more &raquo;</a></p>
     </div>
 
     <div class="col-md-4">
         <h2>Wine</h2>
         <img src="~/Photo/wine.jpg" height="230" width="385"/>
         <p>Red wines, white wines, champagne, we have it all!</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Account/Login">Learn more &raquo;</a></p>
     </div>
 
     <div class="col-md-4">
         <h2>Liquor</h2>
         <img src="~/Photo/whisky.jpg" height="230" width="355" />
         <p>From a Macallan 30 year neat to somemthing to mix with soda, you can find it here!</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Account/Login">Learn more &raquo;</a></p>
     </div>
 </div>
