Changed admin view

--- a/Crafty/Crafty/Views/Admins/Index.cshtml
+++ b/Crafty/Crafty/Views/Admins/Index.cshtml
@@ -14,7 +14,7 @@
         <h4>Total accounts: @Model.numberOfTotalAccounts</h4>
         <h4>Total subscribers: @Model.numberOfPayingAccounts</h4>
         <h4>Total beer monthly subscribers: @Model.numberOfBeerAccounts</h4>
-        <h4>Total hard monthly liquor: @Model.numberOfHardLiquorAccounts</h4>
+        <h4>Total hard monthly liquor subscribers: @Model.numberOfHardLiquorAccounts</h4>
         <br />
         @*@if(Model.numberOfBeerAccounts == 0)
         {
