--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="jumbotron">
     <h1><strong>Booze Boxes</strong></h1>
-    <p class="lead">Monthly Liqour Subscription Service</p>
+    <p class="lead">Monthly Liquor Subscription Service</p>
     <p><a href="~/Home/Products" class="btn btn-primary btn-lg">Learn more here! &raquo;</a></p>
 </div>
 <div class="row">
