--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             Whether you're into triple IPA's or refreshing hard apple ciders, we have the  drink
             for you!
         </p>
-        <p>** gives you delicious and refreshing monthly liqour packages.</p>
+        <p>** gives you delicious and refreshing monthly liquor packages.</p>
         <p><a class="btn btn-default" href="~/Account/Login">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
