minor fix to admin profile

--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1><strong>Booze Boxes</strong></h1>
     <p class="lead">Monthly Liquor Subscription Service</p>
-    <p><a href="~/Home/Products" class="btn btn-primary btn-lg">Learn more here! &raquo;</a></p>
+    <p><a href="~/Home/Products" class="btn btn-primary btn-lg">See our products!  &Rang;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
