Added isSubscribed bool, fixed page navigation

--- a/Crafty/Crafty/Views/Manage/Purchase.cshtml
+++ b/Crafty/Crafty/Views/Manage/Purchase.cshtml
@@ -7,7 +7,7 @@
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 
-@using (Html.BeginForm("ThankYou", "Manage"))
+@using (Html.BeginForm("ThankYou", "Survey"))
 {
     @Html.AntiForgeryToken()
 
