Fixed getNumberOfTotalAccounts(); removed a few superfluous comments

--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
         <p><a class="btn btn-default" href="~/Account/Login">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
+        @*This wine pic and paragraph should be removed*@
         <h2>Wine</h2>
         <img src="~/Photo/wine.jpg" height="230" width="385" />
         <p>Red wines, white wines, champagne, we have it all!</p>
