Fixed retake survey link

--- a/Crafty/Crafty/Views/Manage/Purchase.cshtml
+++ b/Crafty/Crafty/Views/Manage/Purchase.cshtml
@@ -43,7 +43,7 @@
 
 <div>
 
-    <h5><a href="/Survey/Create">&nbsp&nbspRetake survey</a></h5>
+    <h5>&nbsp&nbsp<a href="/Survey/Create">Retake survey</a></h5>
     <br />
 
 </div>
